# turbopress

./: .gitignore  404.html  LICENSE  NOTICE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  release.yml  service-ci.yml
action/: README.md  action.yml  compress.py
benchmarks/: README.md  common_eval.py  compare.py  run_all.sh  run_awq.py  run_bnb.py  run_gguf.py  run_gptq.py  run_hqq.py  run_turbopress.py  run_unsloth.py
business/: launch_plan.md  yc_application.md
business/landing/: index.html
certificate/: index.html
cli/: index.html
docs/: certificate.md  cli.md  hosted.md  index.md  limitations.md  quickstart.md  research.md
hosted/: index.html
limitations/: index.html
paper/: Makefile  README.md  make_figures.py  preprints_org_submission_metadata.txt  references.bib  turbopress_openreview.aux  turbopress_openreview.bbl  turbopress_openreview.out  turbopress_openreview.tex  turbopress_preprint.aux  turbopress_preprint.bbl  turbopress_preprint.out  turbopress_preprint.tex
quickstart/: index.html
research/: index.html
results/: allocation_qwen06b.json  equil_baseline_qwen06b.json  equil_baseline_qwen17b.json  harness_results.json  ldlq_micro.json  prop2_smollm135m.json  real_model_ef_smollm135m.json  real_model_qwen06b.json  real_model_results.json  real_model_tcq.json  real_model_v2.json  runtime_bench.json  smoke.json
scripts/: bench_packed.py  bench_runtime.py  graph_decode_bench.py  run_packed.py  turbopress_onecell.py  vs_unsloth.py
search/: search_index.json
service/: .env.example  Dockerfile  README.md  __init__.py  auth.py  billing.py  config.py  db.py  fly.toml  jobs.py  main.py  models.py  requirements.txt  runner.py  schemas.py  storage.py
service/tests/: conftest.py  test_flow.py
tests/: test_allocate.py  test_artifact_state.py  test_calibration.py  test_certificate.py  test_cli.py  test_codebooks.py  test_gptq.py  test_hadamard.py  test_harness.py  test_improvements.py  test_ldlq_micro.py  test_linear.py  test_qjl.py  test_quantizer.py  test_real_model.py  test_run.py  test_runtime.py  test_tcq_ldlq.py  test_trellis.py  test_validate.py
turbopress/: __init__.py  allocate.py  certificate.py  cli.py  codebooks.py  gptq.py  hadamard.py  harness.py  ldlq_micro.py  linear.py  pipeline.py  qjl.py  quantizer.py  real_model.py  runtime.py  trellis.py  triton_kernel.py  validate.py
worker/: README.md  modal_app.py
